# qwen3-asr-openai

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build_and_push.yaml
application/: __init__.py  utils.py  vars.py
application/asr/: __init__.py  dashscope_async.py  openai.py
application/utils/: audio.py  timer.py
